# parallel_curves

./: CMakeLists.txt  LICENSE  README.md  package.xml  pc_plugin.xml
.github/workflows/: action-noetic.yaml  action-ros-ci.yaml  action-ros.yaml
include/parallel_curves/: collision_detector.h  parallel_curves.h  parallel_curves_ros.h  shortest_path.h
launch/: test.launch
src/: collision_detector.cpp  parallel_curves.cpp  parallel_curves_ros.cpp
test/: parallel_curves_costmap.cpp  parallel_curves_grid.cpp  shortest_path.cpp
test/map/: environment.h  grid.h  obstacle.h  obstacles.pgm  read_pgm.cpp  read_pgm.h
