<?xml version="1.0"?>
<package format="2">
  <name>parallel_curves</name>
  <version>2.0.0</version>
  <description>The Parallel Curves Path Planning package</description>

  <maintainer email="avelino@lcad.inf.ufes.br">Avelino Forechi</maintainer>

  <author email="avelino@lcad.inf.ufes.br">Avelino Forechi</author> -->

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/parallel_curves</url> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2_ros</depend>
  
  <!-- These are test dependencies -->
  <depend>netpbm</depend> 
  <depend>ament_index_cpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
 
  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/pc_plugin.xml" />
  </export>
</package>
